# django_finance

./: .env.template  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
django_finance/apps/accounts/: admin.py  apps.py  managers.py  models.py  urls.py
django_finance/apps/accounts/migrations/: 0001_initial.py
django_finance/apps/common/: apps.py  managers.py  models.py
django_finance/apps/common/management/: templates.py
django_finance/apps/common/management/commands/: startapp.py
django_finance/apps/common/templatetags/: app_info.py  plaid_tags.py
django_finance/apps/plaid/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py  webhooks.py
django_finance/apps/plaid/migrations/: 0001_initial.py  0002_plaidlinkevent_alter_item_options.py  0003_account_transaction.py
django_finance/config/: asgi.py  celery.py  urls.py  wsgi.py
django_finance/config/app_template/: apps.py-tpl
django_finance/config/settings/: base.py  dev.py  test.py
static/js/: flowbite.min.js.map
templates/: _base.html  _base_dashboard.html  index.html
templates/account/: _header.html  base_reauthenticate.html  login.html  logout_modal.html  password_change.html  profile.html  reauthenticate.html  signup.html
templates/components/: account_list.html  alert.html  bank_cards.html  modal.html
templates/errors/: 403.html  404.html  429.html  500.html
templates/layouts/: _header.html  _sidebar.html
templates/mfa/: authenticate.html  index.html  reauthenticate.html
templates/mfa/recovery_codes/: index.html
templates/mfa/totp/: activate_form.html
templates/plaid/: index.html
tests/: conftest.py
tests/accounts/: factories.py  test_managers.py  test_models.py  test_views.py
tests/common/: test_validators.py
tests/plaid/: conftest.py  dummy_data.py  factories.py  test_models.py  test_services.py  test_tasks.py  test_views.py  test_webhooks.py
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/templates/: base.html
